用户界面 - 商品筛选、排序

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -120,4 +120,9 @@ body {
             }
         }
     }
+    .search-form {
+        padding: 0 5px 10px 0;
+        margin-bottom: 10px;
+        border-bottom: 1px solid #eeeeee;
+    }
 }
