--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11059,3 +11059,9 @@ body {
   border-right: 1px solid #eee;
 }
 
+.products-index-page .search-form {
+  padding: 0 5px 10px 0;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #eeeeee;
+}
+
