--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15993,7 +15993,8 @@ body {
 }
 
 .orders-show-page .payment-buttons,
-.orders-show-page .receive-button {
+.orders-show-page .receive-button,
+.orders-show-page .refund-button {
   margin-top: 10px;
   padding-right: 10px;
 }
