--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -64,11 +64,7 @@ body {
 }
 
 /** 商品列表 */
-.products-index-page, .products-favorites-page {
-    .pagination {
-        margin-right: 5px;
-    }
-
+@mixin product-list {
     .products-list {
         padding: 15px;
 
@@ -139,6 +135,15 @@ body {
             }
         }
     }
+}
+
+.products-index-page, .products-favorites-page {
+    .pagination {
+        margin-right: 5px;
+    }
+
+    /*scss 的 @include 用于引用一段样式*/
+    @include product-list;
 
     .search-form {
         padding: 0 5px 10px;
@@ -419,6 +424,18 @@ body {
 
     .product-description img {
         max-width: 100%;
+    }
+
+    .similar-products {
+        @include product-list;
+
+        .title {
+            font-weight: normal;
+        }
+
+        .price {
+            background-color: unset;
+        }
     }
 }
 
